<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:clickable="false">

    <TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotifyStreamer"
            android:id="@+id/spotifyStreamerButton"
            android:layout_gravity="center_horizontal"
            android:onClick="doSpotifyStreamerButton"
            android:background="#F08C35"/>

        <Button
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scoresApp"
            android:id="@+id/scoresAppButton"
            android:layout_gravity="center_horizontal"
            android:onClick="doScoresAppButton"
            android:background="#F08C35" />

        <Button
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/libraryApp"
            android:id="@+id/libraryAppButton"
            android:layout_gravity="center_horizontal"
            android:onClick="doLibraryAppButton"
            android:background="#F08C35" />

        <Button
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buildItBigger"
            android:id="@+id/buildItBiggerButton"
            android:layout_gravity="center_horizontal"
            android:onClick="doBuildItBiggerButton"
            android:background="#F08C35" />

        <Button
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/baconReader"
            android:id="@+id/baconReaderButton"
            android:layout_gravity="center_horizontal"
            android:onClick="doBaconReaderButton"
            android:background="#F08C35" />

        <Button
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstoneMyOwnApp"
            android:id="@+id/capstoneMyOwnAppButton"
            android:onClick="doCapstoneMyOwnAppButton"
            android:background="#d73155" />
    </LinearLayout>

</RelativeLayout>
